| Summary: | ASTERISK-30091: cdr: Allow CDRs to ignore call state changes | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-06-01 10:02:13 | Date Closed: | 2022-10-10 11:33:12 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | CDR/General |
| Versions: | 18.12.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Add option(s) to allow CDR to completely ignore bridging events and other things that may be irrelevant and detrimental to CDR. This would allow for performance increases by decreasing the number of local channels that needed to be used for CDR purposes, and decrease the amount of CDR processing required and more easily allow for CDRs that only look at start, answer, and end, and ignore everything else, such as bridging changes, call parking, etc. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-06-01 10:02:14.611-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-10-10 11:33:13.394-0500 Change 19430 merged by Friendly Automation: cdr: Allow bridging and dial state changes to be ignored. [https://gerrit.asterisk.org/c/asterisk/+/19430|https://gerrit.asterisk.org/c/asterisk/+/19430] By: Friendly Automation (friendly-automation) 2022-10-10 12:06:40.216-0500 Change 19432 merged by Friendly Automation: cdr: Allow bridging and dial state changes to be ignored. [https://gerrit.asterisk.org/c/asterisk/+/19432|https://gerrit.asterisk.org/c/asterisk/+/19432] By: Friendly Automation (friendly-automation) 2022-10-10 12:07:03.835-0500 Change 19433 merged by Friendly Automation: cdr: Allow bridging and dial state changes to be ignored. [https://gerrit.asterisk.org/c/asterisk/+/19433|https://gerrit.asterisk.org/c/asterisk/+/19433] By: Friendly Automation (friendly-automation) 2022-10-10 12:07:08.202-0500 Change 18603 merged by Friendly Automation: cdr: Allow bridging and dial state changes to be ignored. [https://gerrit.asterisk.org/c/asterisk/+/18603|https://gerrit.asterisk.org/c/asterisk/+/18603] By: Friendly Automation (friendly-automation) 2022-10-10 12:07:17.300-0500 Change 19431 merged by Friendly Automation: cdr: Allow bridging and dial state changes to be ignored. [https://gerrit.asterisk.org/c/asterisk/+/19431|https://gerrit.asterisk.org/c/asterisk/+/19431] | ||